Refer to ChangeLog for detailed per-file info.

caspar version current

- Beware!  Yet another unstable bleeding edge snapshot release.  Test results
  are welcomed.

- Typo in caspar.mk which lead to "invalid syntax in conditional" error
  is fixed.

- Added csp_sucp(1) manpage.  This script now gets installed.

caspar version 20060216

- Beware! This is an unstable bleeding edge snapshot release.  Test results
  are welcomed.

- caspar.mk now has support for installing files using sudo, wrapped in ssh:
  it runs something like

   ssh foo@bar "sudo sh -c \"cat - > /duh/blah\"" < blah

  .  To facilitate this, new variables have been introduced: csp_PUSH (default:
  a csp_scp make function), csp_SUCP, csp_UHOST, csp_UHOSTS, csp_DIR, csp_XARG;
  csp_scp_UHOST, csp_scp_UHOSTS, csp_scp_DIR; csp_sucp_UHOST, csp_sucp_DIR,
  csp_sucp_USER.

  A script csp_sucp, dealing with the wrapping, is now shipped; it honors a
  CSP_SUCP_USER environment variable.

  Lots of variables are now deprecated:

   for csp_SUHS now use csp_scp_UHOSTS  (or use csp_UHOSTS)
   for csp_SUH now use csp_scp_UHOST    (or use csp_UHOST)
   for csp_SCPDIR now use csp_scp_DIR   (or use csp_DIR)

  The variable csp_CPDIRS will be phased out: no more multiple cp target dirs.
  Don't worry yet: we still supply full backwards compatibity.

- mk/caspar.mk: install and load now are .PHONY targets, as they should be.
  You'll like this if you have files named "install" or "load".  Thanks Guus
  Sliepen.


caspar version 20050424

- New variable csp_EXTRAFILES added.  This enables one to succesfully run e.g.

    make .bashrc-install

  .  Aren't you all happy now?  Thanks Guus Sliepen for the patch.
- In order to have csp_EXTRAFILES behave nice, .%.swp is added to
  csp_TABOOFILES_DEFAULT and .svn is added to csp_TABOODIRS_DEFAULT.


caspar version 20050302

- Fixed caspar(7) manpage: the last part was not typesetted.  Duh.


caspar version 20050301
