@@ -1,6 +1,6 @@
 Refer to ChangeLog for detailed per-file info.
 
-caspar version current
+caspar version 20060531
 
 - Beware!  Yet another unstable bleeding edge snapshot release.  Test results
   are welcomed.
@@ -9,6 +9,9 @@ caspar version current
   is fixed.
 
 - Added csp_sucp(1) manpage.  This script now gets installed.
+
+- Minor improvements on other manpages.
+
 
 caspar version 20060216
 
@@ -133,4 +136,4 @@ caspar version 20030803
 
 - See doc/ChangeLog.2002 for news about caspar 20030803 and earlier
 
-# $Id: NEWS,v 1.21 2006-03-19 20:58:18 joostvb Exp $
+# $Id: NEWS,v 1.22 2006-05-31 14:26:24 joostvb Exp $
